Add codecs and kafka serdes